# tddtnews

./: .gitignore  README.md  credentials.json  pyproject.toml  tddtgui.bat  tddtgui.sh
assets/: images.json  info.json
calendarparser/: calendarParser.py
emailcreator/: emailRender.py
emailcreator/templates/: liondancebeat.jinja
emailcreator/templates/parts/: event.jinja  image.jinja  news.jinja  style.jinja
emailsender/: emailSender.py
imagehoster/: imageHoster.py
tddtgui/: app.py  popups.py  widgets.py
tddtnews/: emailConstructor.py  emailSender.py  googleAuth.py  main.py  tddtPublish.py  tddtnews.py
